# Alumination24-25

./: README.md  docker-compose.yaml  package-lock.json  package.json
backend/: .gitignore  Dockerfile  db.sqlite3  pyproject.toml  wsgi-entrypoint.sh
backend/Authentication/: admin.py  models.py  options.py  serializers.py  urls.py  views.py
backend/Authentication/migrations/: 0001_initial.py
backend/Events/: admin.py  models.py  options.py  serializers.py  urls.py  views.py
backend/Events/migrations/: 0001_initial.py  0002_registrationfield.py
backend/Sponsors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/backend/backend/: settings.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  Navbar.jsx  index.css
frontend/src/components/: ChangePasswordView.jsx  ProfileRestrictedRoute.jsx  UserRestrictedRoute.jsx  VerifyEmailView.jsx
frontend/src/components/Authentication/: Auth.css  Logout.jsx  forgotPassword.css  forgotPassword.jsx  login.css  login.jsx  profile.css  profile.jsx  register.css  register.jsx  signup.css  signup.jsx
frontend/src/components/Home/: Character.jsx  CursorAnimation.css  CursorAnimation.jsx  EventCarousel.jsx  EventIndividual.jsx  Events.jsx  Footer.css  Footer.jsx  Gallery.css  Gallery.jsx  Gallery1.jsx  Home.jsx  Home1.css  all.css  (+25 more)
frontend/src/hooks/: useForgotPassword.js  useIndividualEvent.js  useLogin.js  useProfile.js  useSendPasswordLink.js  useSignup.js
(+29 files in other folders)
